fix basket items spacing

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -587,6 +587,7 @@ input#match-search {
 
 .order--details-feat {
   display: block;
+  margin: 3px 2px;
 }
 
 .order--details-feat:before {
@@ -596,7 +597,7 @@ input#match-search {
   background-size: contain;
   height: 14px;
   width: 14px;
-  margin-right: 15px;
+  margin: 5px 10px -2px 2px;
 }
 
 .order--details-feat > em {
